<resources>
    <string name="app_name">icare Patient</string>
    <string name="lorum">Lorem ipsum is placeholder text commonly used in visual mockups.</string>
    <string name="gender">Select Gender</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="editprofile">Edit Profile</string>
    <string name="doctordetail">Doctor Detail</string>
    <string name="availability">Availability</string>
    <string name="notification">Notification</string>
    <string name="history">History</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="myappointment">My Appointment</string>
    <string name="share">Share</string>
    <string name="aboutus">About US</string>
    <string name="help">Help</string>
    <string name="doctor_list">Doctor List</string>
    <string name="view_all">View All</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="book_now">Book Now</string>
    <string name="search_here">Search here</string>
    <string name="small_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
    <string name="search_doctor">Search Doctor</string>
    <string name="book_appointment">Book Appintment</string>
    <string name="my_appointments">My Appointment</string>
    <string name="contact_us">Contact Us</string>
    <string name="consultancy_fee">Consultancy Fee</string>
    <string name="book_an_appointment">Book an Appointment</string>
    <string name="available_on_days">Available On Days</string>
    <string name="available_today">Available Today</string>
    <string name="book">Book</string>
    <string name="server_errors">Something Went Wrong</string>
    <string name="plz_check_your_intrenet_text">Please check your internet connection</string>

    <string name="sarch_by_name">Search By Name</string>
    <string name="sarch_by_city">Search By City</string>
    <string name="sarch_by_state">Search By State</string>
    <string name="sarch_by_specialty">Search By Specialty</string>
    <string name="sarch_by_sector">Search By Sector</string>
    <string name="my_appointment">My Appointment</string>
    <string name="current">Current</string>
    <string name="canceled">Canceled</string>
</resources>
