<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/search_doctor_background"
    android:layout_height="match_parent">


    <RelativeLayout
        android:background="@color/blue_clr"
        android:id="@+id/rlHomeToolbarId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/id_back"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_centerVertical="true"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_arrow_back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:text="Search Doctor"
            android:textSize="@dimen/_17sdp"
            android:id="@+id/tv_title"
            android:textColorHint="@color/white_clr"
            android:textColor="@color/white_clr"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">
        </TextView>

        <RelativeLayout
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">


            <RelativeLayout
                android:id="@+id/rlCartHomeId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">

                <RelativeLayout
                    android:id="@+id/rl_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivnoticationHomeId"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10sp"
                        android:layout_marginRight="10sp"
                        android:src="@drawable/ic_notification_white" />

                    <RelativeLayout
                        android:id="@+id/rlCartBackHomeId"
                        android:layout_width="@dimen/_8sdp"
                        android:layout_height="@dimen/_8sdp"
                        android:layout_marginStart="10sp"
                        android:layout_marginLeft="10sp"
                        android:layout_marginBottom="10sp"
                        android:background="@drawable/red_round_button_fill">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/ivNofificationcoutId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_10sdp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                </RelativeLayout>


            </RelativeLayout>


        </RelativeLayout>

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@+id/rlHomeToolbarId"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:src="@drawable/logo_icare" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_170sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_100sdp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/_2sdp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_4sdp"
            app:cardElevation="@dimen/_2sdp">

            <RelativeLayout
                android:id="@+id/ivSbNId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/sarch_by_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13sdp" />

                <androidx.appcompat.widget.AppCompatImageView

                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:rotation="180"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_arrow_back_red" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_4sdp"
            app:cardElevation="@dimen/_2sdp">

            <RelativeLayout
                android:id="@+id/ivSbCId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/sarch_by_city"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13sdp" />

                <androidx.appcompat.widget.AppCompatImageView

                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:rotation="180"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_arrow_back_red" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_4sdp"
            app:cardElevation="@dimen/_2sdp">

            <RelativeLayout
                android:id="@+id/ivSbSId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/sarch_by_state"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13sdp" />

                <androidx.appcompat.widget.AppCompatImageView

                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:rotation="180"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_arrow_back_red" />


            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_4sdp"
            app:cardElevation="@dimen/_2sdp">

            <RelativeLayout
                android:id="@+id/ivSbSpecialtyId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/sarch_by_specialty"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13sdp" />

                <androidx.appcompat.widget.AppCompatImageView

                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:rotation="180"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_arrow_back_red" />


            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_4sdp"
            app:cardElevation="@dimen/_2sdp">

            <RelativeLayout
                android:id="@+id/ivSbSpectorId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/sarch_by_sector"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13sdp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:rotation="180"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_arrow_back_red" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>


</RelativeLayout>