<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:paddingRight="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_clr">

            <RelativeLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/rlHomeFirstId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager.widget.ViewPager
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:id="@+id/vpHomeBannerId"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_140sdp" />


                <com.google.android.material.tabs.TabLayout
                    android:visibility="gone"
                    android:id="@+id/tlHomeBannerId"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_8sdp"
                    android:layout_below="@+id/vpHomeBannerId"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="1sp"
                    app:tabBackground="@drawable/tab_bg"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp"
                    app:tabTextColor="@android:color/transparent" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPatientNameId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tlHomeBannerId"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="Hey, Adams Evies"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPatientWelcomeId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvPatientNameId"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:text="Now,We may help you?"
                    android:textAlignment="center"
                    android:textSize="@dimen/_12sdp" />


                <ProgressBar
                    android:id="@+id/pbId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llFirstId"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_below="@+id/rlHomeFirstId"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="2">


                <androidx.cardview.widget.CardView
                    android:id="@+id/cvSearchDoctorId"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/pateint_dashboard_btn"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:padding="5sp"
                            android:src="@drawable/surgeon" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5sp"
                            android:gravity="center"
                            android:text="@string/search_doctor"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_11sdp" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cvBookAppointmentId"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/pateint_dashboard_btn"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:padding="5sp"
                            android:src="@drawable/book_appointment" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5sp"
                            android:gravity="center"
                            android:text="@string/book_appointment"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_11sdp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSecId"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_below="@+id/llFirstId"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="2">


                <androidx.cardview.widget.CardView
                    android:id="@+id/cvMyAppointmentId"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/pateint_dashboard_btn"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:padding="5sp"
                            android:src="@drawable/first_aid_kit" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5sp"
                            android:gravity="center"
                            android:text="@string/my_appointments"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_11sdp" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cvContactUsId"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/pateint_dashboard_btn"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:padding="5sp"
                            android:src="@drawable/ambulance" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5sp"
                            android:gravity="center"
                            android:text="@string/contact_us"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_11sdp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDoctorListId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llSecId"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/doctor_list"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvViewAllId"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llSecId"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/view_all"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDoctorListId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:layout_below="@+id/tvDoctorListId"
                android:layout_marginTop="@dimen/_10sdp"
                android:nestedScrollingEnabled="false" />


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>