<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
  android:layout_marginBottom="@dimen/_8sdp">

    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/_1sdp"
        android:id="@+id/cvSelectorADoctorId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#F8F8F8"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp">


        <LinearLayout
            android:id="@+id/llDoctorRowClickId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_3sdp">

            <RelativeLayout
                android:id="@+id/rluserId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDoctorFeesId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="end"
                    android:text="Fee $100"
                    android:textColor="@color/dark_green_clr"
                    android:textSize="@dimen/_12sdp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civDoctListId"
                    android:layout_width="@dimen/_58sdp"
                    android:layout_height="@dimen/_58sdp"
                    android:layout_below="@+id/tvDoctorFeesId"
                    android:layout_margin="5sp"
                    android:src="@drawable/dummy_user" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civStatusId"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="@dimen/_5sdp"
                    android:layout_below="@+id/civDoctListId"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/green_circle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:id="@+id/ivselectdocnextarrowid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/civStatusId"
                    android:layout_below="@+id/civDoctListId"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/available"
                    android:textColor="@color/dark_green_clr"
                    android:textSize="@dimen/_9sdp"
                    android:layout_toRightOf="@+id/civStatusId" />





                <RelativeLayout
                    android:id="@+id/rldoctordetailid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvDoctorFeesId"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_toEndOf="@+id/civDoctListId"
                    android:layout_toRightOf="@+id/civDoctListId">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/TvhospitlNameId"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:text="Dr.Scott Ben"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvdestistid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/TvhospitlNameId"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="Cordiologist(5 years experience)"
                        android:textColor="@color/red"
                        android:textSize="@dimen/_10sdp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/TvserviceId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvdestistid"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/unavailable"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="normal" />


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_book"
                        android:layout_width="@dimen/_85sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_below="@+id/TvserviceId"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/book_now"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_8sdp" />


                </RelativeLayout>


            </RelativeLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>
